--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Wacky Uno by ThatOneGoat</title>
     </head>
     <body>
+        <h1>wackyuno by ThatOneGoat</h1>
 <a href="./wackyunorules">Terms and Conditions aka Rules</a>
     </body>
 </html>
