--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>wackyuno by ThatOneGoat</h1>
-<a href="./wackyunorules">Terms and Conditions aka Rules</a>
+<a href="./thatonegoat.html">Terms and Conditions aka Rules</a>
     </body>
 </html>
