--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>wackyuno by ThatOneGoat</h1>
 <a href="./thatonegoat.html">Terms and Conditions aka Rules</a>
+<a href="https://github.com/cbgames-xyz/wackyuno">Github repo</a>
     </body>
 </html>
